# gshhg

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  meta.yaml  setup.py
notebooks/: mapping.ipynb
src/core/: CMakeLists.txt  broadcast.hpp  geometry.cpp  geometry.hpp  gshhg.cpp  gshhg.hpp  main.cpp  math.hpp  thread.hpp
src/gshhg/: __init__.py  core.pyi
src/gshhg/tests/: test_distance.py  test_gshhg.py
src/gshhg/tests/GSHHS_shp/: LICENSE.TXT
